Fix header overlap in table view

--- a/project-static/squest/css/squest.css
+++ b/project-static/squest/css/squest.css
@@ -75,4 +75,5 @@ div.dt-button-collection {
 
 .dtfc-fixed-left{
     background-color: white; !important;
+    z-index: 1;
 }
